---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: ????

  Changes:
    - Keep entity selection box in the settings menu for invalid entries. This lets you fix broken sets more easily.

---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2022-06-30

  Features:
    - Add preset addons for "BZ Graphite & Diamonds" and "Leighzer's Uranium Innovations". (Thanks to nihilistzsche!)

  Changes:
    - Update SE presets for SE 0.6

---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2022-06-13

  Features:
    - Add preset for SE+K2+248k.
    - Add preset addons for "Science Pack Galore" and various BZ mods. (Thanks to nihilistzsche for both!)

  Changes:
    - Tweaks to Nullius preset to account for some boxed science packs. (This isn't perfect, fully accounting for all boxed versions of science packs will require supporting alternate items for milestones).

  Bugfixes:
    - Fix crash with mods that create items before the start of the game. 

  Locale:
    - Locale updates from Crowdin.

---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2022-06-07

  Features:
    - Now requires Factorio 1.1.60 or above.
    - Greatly improved estimations accuracy when added to an existing game. Milestones can now use production statistics directly to backfill completed milestones.
      - Accuracy is greater for more recent completion times. Expect ±5 minutes for 50 hours games, ±25m for 250h, ±1h40 for 1000h.
      - Editing estimation ranges is now only available for inaccurate estimations (>1hour uncertainty), and now work by just typing the time instead of typing "x minutes ago". This makes more sense now that you won't have to copy values from production statistics.