@@ -104,7 +104,7 @@ return {
             local fluid_stats = force.fluid_production_statistics
             local kill_stats = force.kill_count_statistics
             for _, milestone in pairs(global_force.complete_milestones) do
-                if milestone.lower_bound_tick ~= nil then
+                if is_valid_milestone(milestone) and milestone.lower_bound_tick ~= nil then
                     local new_lower_bound, new_upper_bound = find_completion_tick_bounds(milestone, item_stats, fluid_stats, kill_stats)
                     log("Old tick bounds for " ..milestone.name.. " : " ..milestone.lower_bound_tick.. " - " ..milestone.completion_tick)
                     log("New tick bounds for " ..milestone.name.. " : " ..new_lower_bound.. " - " ..new_upper_bound)
