@@ -5,6 +5,9 @@ Date: ????
   Changes:
     - Keep entity selection box in the settings menu for invalid entries. This lets you fix broken sets more easily.
 
+  Bugfixes:
+    - Fix crash when milestones tried to backfill time for an item that no longer exists after mod changes.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: 2022-06-30
